Fixed issue when screen is too wide

--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -8,7 +8,6 @@ a {
 }
 
 .container {
-  max-width: 1100px;
   margin: 0 auto;
   padding: 0 20px 0px 20px;
   display: flex;
