--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,6 @@ body {
 }
 
 .pages {
-  max-width: 1400px;
   margin: 0 auto;
 }
 
